# ai-longtermcare-analysis

./: .gitignore  .gitmodules  README.md  app.py  docling.ipynb  main.py  parser_pdf-json.ipynb  pyproject.toml  requirements.txt
json_extractor/: README.md  json_extraction.py  openai_client.py  output.json  pyproject.toml  raw_data.txt  utils.py
json_extractor/prompt/: example_prompt.py  extraction_prompt.py
json_extractor/templates/: a.json  b.json  c.json  conclusion.json  d.json  e.json  f.json  g.json  h.json  i.json  j.json  k.json  template_a.json
pdf_extractor/: pdf_extraction.py
pdfplumber/extracted_data/: table5.txt  table6.txt  table7.txt  table8.txt  text2.txt  text3.txt  text4.txt  text6.txt  text7.txt  text8.txt
pdfplumber/extracted_data/data1/: table10.txt  table2.txt  table3.txt  table4.txt  table9.txt  text10.txt  text5.txt  text9.txt
pdfplumber/extracted_data/data2/: table1.txt  table10.txt  table11.txt  table16.txt  table17.txt  table21.txt  table22.txt  table23.txt  table5.txt  table7.txt  table8.txt  text0.txt  text11.txt  text12.txt  text13.txt  text15.txt  text16.txt  text2.txt  text20.txt  text21.txt  text25.txt  text26.txt  text4.txt  text6.txt  text7.txt  text8.txt
pdfplumber/extracted_data/pdf_with_marks/: table12.txt  table6.txt  table9.txt  text1.txt  text10.txt  text14.txt  text17.txt  text18.txt  text19.txt  text22.txt  text23.txt  text24.txt  text3.txt  (+2 more)
pdfplumber/src/: processor.py
templates/: result.html  upload.html
uploads/: a.json  b.json  c.json  conclusion.json  d.json  e.json  f.json  g.json  h.json  j.json  k.json
(+46 files in other folders)
