[tool.poetry]
name = "formated-data-extractor"
version = "0.0.0"
description = "A package to convert unformatted data into a structured format."
authors = ["jason2714 <jason27146913@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.57.0"
python-dotenv = "^1.0.1"
json-repair = "^0.30.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
